{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 98,
  "lineage": "e59d993e-4962-bce3-cc73-a68ab8df756c",
  "resources": [
    {
      "module": "module.ec2_app_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:134695493860:instance/i-0c8ef9fb856c8d98c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8ef9fb856c8d98c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public-terrform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a80c38990390cb8f",
            "private_dns": "ip-172-31-31-102.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.31.102",
            "public_dns": "ec2-174-129-55-165.compute-1.amazonaws.com",
            "public_ip": "174.129.55.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09987b809f897100d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "app-security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c34bafd1f310b874",
            "tags": {
              "Name": "app-instance"
            },
            "tags_all": {
              "Name": "app-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f3e450193637298"
            ]
          },
          "dependencies": [
            "module.ec2_app_module.aws_security_group.security_group",
            "module.key_pair_module.aws_key_pair.public_terrform_key",
            "module.key_pair_module.local_file.private_terrform_key",
            "module.key_pair_module.tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_app_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134695493860:security-group/sg-08f3e450193637298",
            "description": "Security Group - Ec2 Instance.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f3e450193637298",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 433
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-security-group",
            "name_prefix": "",
            "owner_id": "134695493860",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-security-group"
            },
            "tags_all": {
              "Name": "app-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-029b30bb5ac766477"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.key_pair_module.aws_key_pair.public_terrform_key",
            "module.key_pair_module.local_file.private_terrform_key",
            "module.key_pair_module.tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jenkins_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:134695493860:instance/i-0f65116aa1c58594f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f65116aa1c58594f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public-terrform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00c9dd1b61bf96261",
            "private_dns": "ip-172-31-19-185.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.19.185",
            "public_dns": "ec2-54-221-156-227.compute-1.amazonaws.com",
            "public_ip": "54.221.156.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aa424f020120dede",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "security-group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c34bafd1f310b874",
            "tags": {
              "Name": "jenkins-instance"
            },
            "tags_all": {
              "Name": "jenkins-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06cfef86e9f4518f9"
            ]
          },
          "dependencies": [
            "module.ec2_jenkins_module.aws_security_group.security_group",
            "module.key_pair_module.aws_key_pair.public_terrform_key",
            "module.key_pair_module.local_file.private_terrform_key",
            "module.key_pair_module.tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_jenkins_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:134695493860:security-group/sg-06cfef86e9f4518f9",
            "description": "Security Group - Ec2 Instance.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06cfef86e9f4518f9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 433
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security-group",
            "name_prefix": "",
            "owner_id": "134695493860",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group"
            },
            "tags_all": {
              "Name": "security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-029b30bb5ac766477"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.key_pair_module.aws_key_pair.public_terrform_key",
            "module.key_pair_module.local_file.private_terrform_key",
            "module.key_pair_module.tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_ip_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ddbc78801ceffa17",
            "domain": "vpc",
            "id": "eipalloc-0ddbc78801ceffa17",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-214-124-99.compute-1.amazonaws.com",
            "public_ip": "3.214.124.99",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.ec2_jenkins_module.aws_instance.ec2_instance",
            "module.ec2_jenkins_module.aws_security_group.security_group",
            "module.key_pair_module.aws_key_pair.public_terrform_key",
            "module.key_pair_module.local_file.private_terrform_key",
            "module.key_pair_module.tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "module": "module.route53_module",
      "mode": "data",
      "type": "aws_eip",
      "name": "elastic_ip_address_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a36f4686283d7478",
            "domain": "vpc",
            "id": "eipalloc-0ddbc78801ceffa17",
            "instance_id": "i-0c8ef9fb856c8d98c",
            "network_interface_id": "eni-0a80c38990390cb8f",
            "network_interface_owner_id": "134695493860",
            "private_dns": "ip-172-31-31-102.ec2.internal",
            "private_ip": "172.31.31.102",
            "public_dns": "ec2-3-214-124-99.compute-1.amazonaws.com",
            "public_ip": "3.214.124.99",
            "public_ipv4_pool": "amazon"
          }
        }
      ]
    }
  ]
}